<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/colorSurface"
    android:padding="16dp"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_add_transaction_btn_income"
            android:text="@string/Income"
            android:textColor="@color/toggle_button_income_text_selector"
            android:backgroundTint="@color/income_bg_selector"
            android:strokeColor="@color/income_stroke_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:checkable="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_add_transaction_btn_expense"
            android:text="@string/Expense"
            android:textColor="@color/toggle_button_expense_text_selector"
            android:backgroundTint="@color/expense_bg_selector"
            android:strokeColor="@color/expense_stroke_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:checkable="true"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Date + Fields -->
    <TextView
        android:id="@+id/fragment_add_transaction_date"
        android:text="26/4/25 (Sat)"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fragment_add_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true" />

    <EditText
        android:id="@+id/fragment_add_transaction_edtCategory"
        android:hint="@string/category"
        android:focusable="false"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fragment_add_transaction_edtAccount"
        android:hint="@string/account"
        android:focusable="false"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/fragment_add_transaction_edtNote"
        android:layout_marginTop="8dp"
        android:hint="@string/note"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:gravity="top|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Custom Number Pad -->

    <LinearLayout
        android:id="@+id/fragment_add_transaction_layout_save"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/fragment_add_transaction_btnSave"
            android:text="@string/save"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_add_transaction_btnContinue"
            android:text="@string/ads_continue"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_add_transaction_layout_edit"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/fragment_add_transaction_btnDelete"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_add_transaction_btnCopy"
            android:text="@string/copy"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_add_transaction_btnBookmark"
            android:text="@string/bookmark"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>