<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/item_statistic_dialog_weeklyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_statistic_dialog_textWeekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly"
            />

        <ImageView
            android:id="@+id/item_statistic_dialog_imgWeeklyCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_statistic_dialog_monthlyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_statistic_dialog_textMonthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/item_statistic_dialog_imgMonthlyCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_statistic_dialog_yearlyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_statistic_dialog_textYearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yearly"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/item_statistic_dialog_imgYearlyCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />
    </LinearLayout>

    <!-- Mỗi lựa chọn là một dòng -->
    <LinearLayout
        android:id="@+id/item_statistic_dialog_listLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_statistic_dialog_textList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <ImageView
            android:id="@+id/item_statistic_dialog_imgListCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />
    </LinearLayout>

    <!-- Mỗi lựa chọn là một dòng -->
    <LinearLayout
        android:id="@+id/item_statistic_dialog_trendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_statistic_dialog_textTrend"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/trend" />

        <ImageView
            android:id="@+id/item_statistic_dialog_imgTrendCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_statistic_dialog_optionCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="16dp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:textStyle="bold"/>
</LinearLayout>