<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/fragment_statistic_note_sortHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/fragment_statistic_note_headerNote"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            android:gravity="start"
            android:drawableEnd="@drawable/ic_baseline_arrow_downward_24"
            android:drawablePadding="4dp" />

        <TextView
            android:id="@+id/fragment_statistic_note_headerCount"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1->9"
            android:textColor="?android:attr/textColorPrimary"
            android:drawableEnd="@drawable/ic_baseline_arrow_downward_24"
            android:gravity="center" />

        <TextView
            android:id="@+id/fragment_statistic_note_headerAmount"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="end"
            android:drawableEnd="@drawable/ic_baseline_arrow_downward_24"
            android:drawablePadding="4dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/fragment_statistic_note_noDataText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/no_data"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:visibility="gone"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_statistic_note_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>